traversal.snake.Snake.scala.error
Compilation error:
Snake:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:8: warning: enclosing method positionFinale has result type Unit: return value discarded
      return true
      ^Snake:10: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    else return false
                ^Snake:10: warning: enclosing method positionFinale has result type Unit: return value discarded
    else return false
         ^Snake:33: error: value unary_! is not a member of Unit
  while(!positionFinale())
        ^